fixes IDEA warnings